--- a/EdiListFX/src/de/vbl/ediliste/view/EdiListe.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiListe.fxml
@@ -4,9 +4,8 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="530.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javfx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiListController">
+<BorderPane prefHeight="527.0" prefWidth="981.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiListController">
 <top><MenuBar BorderPane.alignment="CENTER">
   <menus>
     <Menu mnemonicParsing="false" text="Datei">
@@ -84,9 +83,6 @@
 </HBox><Label layoutX="30.0048828125" layoutY="31.5" text="Bezeichnung:" /><Label alignment="CENTER" layoutX="20.0" layoutY="80.0" prefHeight="17.0" prefWidth="149.0" text="Sender" /><Label layoutX="315.0048828125" layoutY="32.0" text="letzte Änderung:" /><TextField fx:id="ediLastChange" editable="false" layoutX="423.0" layoutY="28.0" prefHeight="25.0" prefWidth="121.0" /><Label layoutX="349.0" layoutY="80.0" prefHeight="17.0" prefWidth="184.0" text="Datenart" /><Label alignment="CENTER" layoutX="179.0" layoutY="80.0" prefHeight="17.0" prefWidth="149.0" text="Empfänger" />
 </children></AnchorPane>
       </content>
-<font>
-<Font size="14.0" />
-</font>
     </TitledPane><TitledPane animated="false" disable="true" prefWidth="646.0" text="Details">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" />
