--- a/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
@@ -35,7 +35,7 @@
 <VBox>
 <children><ToolBar layoutX="-48.0" layoutY="14.0" prefWidth="200.0">
   <items>
-    <Button fx:id="newEdiNrButton" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" /><Button fx:id="deleteEdiEintragButton" disable="true" mnemonicParsing="false" onAction="#deleteEdiEintrag" text="Löschen" />
+    <Button fx:id="btnNewEdiNr" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" /><Button fx:id="btnDeleteEdiEintrag" disable="true" mnemonicParsing="false" onAction="#deleteEdiEintrag" text="Löschen" />
   </items>
 </ToolBar><TableView fx:id="ediNrTable" prefHeight="499.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
   <columns>
@@ -75,7 +75,7 @@
         <AnchorPane>
 <children><TextField fx:id="ediBezeichnung" alignment="TOP_LEFT" layoutX="113.0" layoutY="28.0" prefHeight="25.0" prefWidth="187.0" />
 <HBox layoutX="30.0" layoutY="97.0" prefHeight="25.0" prefWidth="594.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-<children><Button fx:id="senderName" alignment="CENTER" disable="true" minWidth="150.0" mnemonicParsing="false" onAction="#senderButton" /><Button fx:id="empfaengerButton" alignment="CENTER" disable="true" minWidth="150.0" mnemonicParsing="false" onAction="#empfaengerButton" />
+<children><Button fx:id="btnSender" alignment="CENTER" disable="true" minWidth="150.0" mnemonicParsing="false" onAction="#senderButton" /><Button fx:id="btnEmpfaenger1" alignment="CENTER" disable="true" minWidth="150.0" mnemonicParsing="false" onAction="#empfaengerButton" />
 		  <TextField fx:id="datenart" alignment="TOP_LEFT" layoutX="359.0" layoutY="97.0" prefHeight="25.0" HBox.hgrow="ALWAYS">
 <HBox.margin>
 <Insets />
