--- a/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
@@ -28,19 +28,19 @@
 </top>
 <center>
 <SplitPane dividerPositions="0.25435540069686413" prefHeight="511.0" prefWidth="895.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
-<items><TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+<items><TabPane fx:id="TabPaneObjekte" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
   <tabs>
-    <Tab text="Edi-Nr.">
+    <Tab fx:id="tabEdiNr" text="Edi-Nr.">
       <content>
 <VBox>
 <children><ToolBar layoutX="-48.0" layoutY="14.0" prefWidth="200.0">
   <items>
     <Button fx:id="btnNewEdiNr" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" /><Button fx:id="btnDeleteEdiEintrag" disable="true" mnemonicParsing="false" onAction="#deleteEdiEintrag" text="Löschen" />
   </items>
-</ToolBar><TableView fx:id="ediNrTable" prefHeight="499.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+</ToolBar><TableView fx:id="tableEdiNrAuswahl" prefHeight="499.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
   <columns>
-    <TableColumn fx:id="ediNrCol" editable="false" minWidth="20.0" prefWidth="50.0" text="Nr." />
-    <TableColumn fx:id="ediKurzbezCol" editable="false" maxWidth="500.0" minWidth="70.0" prefWidth="177.0" text="Bezeichnung" />
+    <TableColumn fx:id="tColAuswahlEdiNr" editable="false" minWidth="20.0" prefWidth="50.0" text="Nr." />
+    <TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="500.0" minWidth="70.0" prefWidth="177.0" text="Bezeichnung" />
   </columns>
 </TableView>
 </children>
@@ -55,28 +55,48 @@
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
   </content>
+</Tab><Tab text="Partner">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+<children><TableView fx:id="tablePartnerAuswahl" prefHeight="471.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+  <columns>
+    <TableColumn fx:id="tColAuswahlPartnerName" prefWidth="75.0" text="Name" />
+    <TableColumn fx:id="tColAuswahlPartnerSysteme" prefWidth="75.0" text="Systeme" />
+<TableColumn fx:id="tColAuswahlPartnerKomponenten" prefWidth="75.0" text="Komponenten" />
+  </columns>
+</TableView>
+</children></AnchorPane>
+  </content>
+</Tab><Tab fx:id="tabSysteme" disable="true" text="Systeme">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+  </content>
+</Tab><Tab disable="true" text="Komponenten">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+  </content>
 </Tab>
   </tabs>
 </TabPane>
 <VBox>
 <children>
-    <TitledPane fx:id="anbindungPane" animated="false" expanded="false" text="Anbindung">
+    <TitledPane fx:id="paneAnbindung" animated="false" expanded="false" text="Anbindung">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="80.0" />
       </content>
     </TitledPane>
-    <TitledPane fx:id="szenarioPane" animated="false" expanded="false" text="Szenario ">
+    <TitledPane fx:id="paneSzenario" animated="false" expanded="false" text="Szenario ">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" opacity="0.6" prefHeight="60.0" />
       </content>
     </TitledPane>
-    <TitledPane fx:id="ediEintragPane" animated="false" prefHeight="204.0" prefWidth="646.0" text="Edi-Eintrag" textOverrun="LEADING_WORD_ELLIPSIS" VBox.vgrow="ALWAYS">
+    <TitledPane fx:id="paneEdiEintrag" animated="false" prefHeight="204.0" prefWidth="646.0" text="Edi-Eintrag" textOverrun="LEADING_WORD_ELLIPSIS" VBox.vgrow="ALWAYS">
       <content>
         <AnchorPane>
-<children><TextField fx:id="ediBezeichnung" alignment="TOP_LEFT" layoutX="113.0" layoutY="28.0" prefHeight="25.0" prefWidth="187.0" />
+<children><TextField fx:id="tfEdiBezeichnung" alignment="TOP_LEFT" layoutX="113.0" layoutY="28.0" prefHeight="25.0" prefWidth="187.0" />
 <HBox layoutX="30.0" layoutY="97.0" prefHeight="25.0" prefWidth="594.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
 <children><Button fx:id="btnSender" alignment="CENTER" disable="true" minWidth="150.0" mnemonicParsing="false" onAction="#senderButton" /><Button fx:id="btnEmpfaenger1" alignment="CENTER" disable="true" minWidth="150.0" mnemonicParsing="false" onAction="#empfaengerButton" />
-		  <TextField fx:id="datenart" alignment="TOP_LEFT" layoutX="359.0" layoutY="97.0" prefHeight="25.0" HBox.hgrow="ALWAYS">
+		  <TextField fx:id="tfDatenart1" alignment="TOP_LEFT" layoutX="359.0" layoutY="97.0" prefHeight="25.0" HBox.hgrow="ALWAYS">
 <HBox.margin>
 <Insets />
 </HBox.margin></TextField>
