--- a/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="527.0" prefWidth="981.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.MainController">
+<BorderPane prefHeight="584.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.MainController">
 <top><MenuBar BorderPane.alignment="CENTER">
   <menus>
     <Menu mnemonicParsing="false" text="Datei">
@@ -27,8 +27,8 @@
 </MenuBar>
 </top>
 <center>
-<SplitPane dividerPositions="0.2982635342185904" prefHeight="511.0" prefWidth="895.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
-<items><TabPane fx:id="TabPaneObjekte" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+<SplitPane dividerPositions="0.3483754512635379" prefHeight="511.0" prefWidth="895.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
+<items><TabPane fx:id="tabPaneObjekte" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
   <tabs>
     <Tab fx:id="tabEdiNr" text="Edi-Nr.">
       <content>
@@ -46,39 +46,53 @@
 </children>
 </VBox>
       </content>
-    </Tab>
-    <Tab disable="true" text="Szenarios">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-      </content>
-    </Tab><Tab disable="true" text="Anwendungen">
-  <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-  </content>
-</Tab><Tab fx:id="tabPartner" text="Partner">
+    </Tab><Tab fx:id="tabPartner" text="Partner">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 <children><TableView fx:id="tablePartnerAuswahl" prefHeight="471.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
   <columns>
-    <TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Name" />
+    <TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Partner" />
     <TableColumn fx:id="tColAuswahlPartnerSysteme" prefWidth="65.0" text="Systeme" />
 <TableColumn fx:id="tColAuswahlPartnerKomponenten" prefWidth="91.0" text="Komponenten" />
   </columns>
 </TableView>
 </children></AnchorPane>
   </content>
-</Tab><Tab fx:id="tabSysteme" disable="true" text="Systeme">
+</Tab><Tab fx:id="tabSysteme" text="Systeme">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+<children><TableView fx:id="tableSystemAuswahl" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+  <columns>
+    <TableColumn fx:id="tColSelSystemSystemName" prefWidth="131.0" text="System" />
+    <TableColumn fx:id="tColSelSystemPartnerName" prefWidth="99.0" text="Partner" /><TableColumn fx:id="tColSelSystemKomponenten" prefWidth="75.0" text="Komponenten" />
+  </columns>
+</TableView>
+</children></AnchorPane>
   </content>
-</Tab><Tab disable="true" text="Komponenten">
+</Tab><Tab fx:id="tabKomponenten" text="Komponenten">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+<children><TableView fx:id="tableKomponentenAuswahl" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+  <columns>
+    <TableColumn fx:id="tColSelKompoKomponten" prefWidth="108.0" text="Komponente" />
+    <TableColumn fx:id="tColSelKompoSysteme" prefWidth="83.0" text="System" /><TableColumn fx:id="tColSelKompoPartner" prefWidth="75.0" text="Partner" />
+  </columns>
+</TableView>
+</children></AnchorPane>
+  </content>
+</Tab><Tab disable="true" text="Anwendungen">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
   </content>
 </Tab>
+    <Tab disable="true" text="Szenarios">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+      </content>
+    </Tab>
   </tabs>
 </TabPane>
-<VBox>
+<VBox prefHeight="557.0" prefWidth="722.0">
 <children>
     <TitledPane fx:id="paneAnbindung" animated="false" expanded="false" text="Anbindung">
       <content>
