--- a/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/Main.fxml
@@ -4,8 +4,9 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="604.0" prefWidth="1311.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.MainController">
+<BorderPane prefHeight="795.0" prefWidth="1409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.MainController">
 	<top>
 		<MenuBar BorderPane.alignment="CENTER">
 			<menus>
@@ -28,7 +29,7 @@
 		</MenuBar>
 	</top>
 	<center>
-		<SplitPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
+		<SplitPane dividerPositions="0.302771855010661" prefHeight="542.0" prefWidth="1186.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
 			<items>
 				<TabPane fx:id="tabPaneObjekte" prefHeight="577.0" prefWidth="409.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
 					<tabs>
@@ -109,21 +110,25 @@
 						</Tab>
 					</tabs>
 				</TabPane>
-				<VBox prefHeight="577.0">
+				<VBox maxWidth="1084.0" prefHeight="768.0" prefWidth="1036.0">
 					<children>
-						<TitledPane fx:id="paneAnbindung" animated="false" collapsible="false" expanded="false" prefHeight="77.0" text="Anbindung">
+						<TitledPane fx:id="paneAnbindung" animated="false" minWidth="555.0" prefHeight="77.0" text="Anbindung">
 							<content>
-								<AnchorPane minHeight="0.0" minWidth="0.0" />
+								<AnchorPane minHeight="0.0" minWidth="0.0">
+<children><Label layoutX="14.0" layoutY="17.0" prefHeight="17.0" prefWidth="101.0" text="Anbindungs-Name:" /><ComboBox layoutX="125.0" layoutY="13.0" prefHeight="25.0" prefWidth="609.0" />
+</children></AnchorPane>
 							</content>
 						</TitledPane>
-						<TitledPane fx:id="paneSzenario" animated="false" collapsible="false" prefHeight="77.0" text="Szenario ">
+						<TitledPane fx:id="paneSzenario" animated="false" minWidth="555.0" prefHeight="77.0" text="Szenario ">
 							<content>
-								<AnchorPane minHeight="0.0" minWidth="0.0" opacity="0.6" prefHeight="60.0" />
+								<AnchorPane minHeight="0.0" minWidth="222.0" opacity="0.6" prefHeight="51.0" prefWidth="555.0">
+<children><Label layoutX="20.0" layoutY="17.0" prefHeight="17.0" prefWidth="94.0" text="Szenario-Name:" /><ComboBox layoutX="125.0" layoutY="13.0" prefHeight="25.0" prefWidth="610.0" />
+</children></AnchorPane>
 							</content>
 						</TitledPane>
-						<TitledPane fx:id="paneEdiEintrag" animated="false" collapsible="false" prefHeight="270.0" text="Edi-Eintrag" textOverrun="LEADING_WORD_ELLIPSIS" VBox.vgrow="ALWAYS">
+						<TitledPane fx:id="paneEdiEintrag" animated="false" collapsible="false" minWidth="555.0" prefHeight="270.0" text="Edi-Eintrag" textOverrun="LEADING_WORD_ELLIPSIS" VBox.vgrow="ALWAYS">
 							<content>
-								<AnchorPane prefHeight="281.0">
+								<AnchorPane minHeight="-Infinity" minWidth="222.0" prefHeight="244.0" prefWidth="555.0">
 									<children>
 										<HBox layoutX="30.0" layoutY="97.0" prefHeight="25.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
 										<VBox layoutX="9.600000381469727" layoutY="9.600000381469727" prefHeight="244.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -131,7 +136,7 @@
 												<GridPane prefHeight="107.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 													<columnConstraints>
 														<ColumnConstraints hgrow="NEVER" maxWidth="284.0" minWidth="10.0" prefWidth="87.66668701171875" />
-														<ColumnConstraints hgrow="SOMETIMES" maxWidth="666.0" minWidth="10.0" prefWidth="663.0" />
+														<ColumnConstraints hgrow="SOMETIMES" maxWidth="666.0" minWidth="10.0" prefWidth="400.0" />
 														<ColumnConstraints hgrow="NEVER" maxWidth="217.0" minWidth="0.0" prefWidth="98.0" />
 														<ColumnConstraints hgrow="NEVER" maxWidth="182.0" minWidth="10.0" prefWidth="133.0" />
 													</columnConstraints>
@@ -147,27 +152,34 @@
 														<TextField fx:id="ediLastChange" editable="false" layoutX="698.0" layoutY="29.0" prefHeight="25.0" prefWidth="130.0" GridPane.columnIndex="3" />
 														<Label alignment="TOP_CENTER" layoutX="10.0" layoutY="32.0" prefHeight="44.0" prefWidth="101.0" text="Beschreibung:" GridPane.rowIndex="1">
 															<GridPane.margin>
-																<Insets top="10.0" />
+																<Insets top="12.0" />
 															</GridPane.margin>
 														</Label>
 														<Label alignment="CENTER_RIGHT" layoutX="618.0" layoutY="26.0" prefHeight="17.0" prefWidth="140.0" text="produktiv seit:" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
-														</Label>
+<GridPane.margin>
+<Insets right="5.0" />
+</GridPane.margin></Label>
 														<Label alignment="CENTER_RIGHT" layoutX="618.0" layoutY="74.0" prefHeight="17.0" prefWidth="140.0" text="produktiv bis:" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
-														</Label>
+<GridPane.margin>
+<Insets right="5.0" />
+</GridPane.margin></Label>
 														<TextArea fx:id="tfEdiBeschreibung" prefHeight="124.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
 															<GridPane.margin>
 																<Insets top="10.0" />
 															</GridPane.margin>
 														</TextArea>
 														<TextField editable="false" layoutX="753.0" layoutY="13.0" prefHeight="25.0" prefWidth="130.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-														<TextField editable="false" layoutX="702.0" layoutY="55.0" prefHeight="25.0" prefWidth="130.0" GridPane.columnIndex="3" GridPane.rowIndex="2" /><Label alignment="CENTER_RIGHT" layoutX="618.0" layoutY="26.0" prefHeight="17.0" prefWidth="140.0" text="letzte Änderung:" textAlignment="CENTER" GridPane.columnIndex="2" />
+														<TextField editable="false" layoutX="702.0" layoutY="55.0" prefHeight="25.0" prefWidth="130.0" GridPane.columnIndex="3" GridPane.rowIndex="2" /><Label alignment="CENTER_RIGHT" layoutX="618.0" layoutY="26.0" prefHeight="17.0" prefWidth="140.0" text="letzte Änderung:" textAlignment="CENTER" GridPane.columnIndex="2">
+<GridPane.margin>
+<Insets right="5.0" />
+</GridPane.margin></Label>
 													</children>
 												</GridPane>
 												<GridPane prefHeight="145.0">
 													<columnConstraints>
-														<ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
-														<ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
-														<ColumnConstraints hgrow="SOMETIMES" maxWidth="504.0" minWidth="10.0" />
+														<ColumnConstraints hgrow="SOMETIMES" maxWidth="300" minWidth="-Infinity" />
+														<ColumnConstraints hgrow="SOMETIMES" maxWidth="300" minWidth="-Infinity" />
+														<ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" />
 													</columnConstraints>
 													<rowConstraints>
 														<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -176,18 +188,11 @@
 														<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 													</rowConstraints>
 													<children>
-														<Label alignment="CENTER" layoutX="20.0" layoutY="80.0" prefHeight="17.0" text="Sender" />
-														<Label alignment="CENTER" layoutX="179.0" layoutY="80.0" prefHeight="17.0" text="Empfänger" GridPane.columnIndex="1" />
-														<Button fx:id="btnSender" alignment="CENTER" disable="true" mnemonicParsing="false" onAction="#senderButton" prefHeight="25.0" prefWidth="201.0" GridPane.rowIndex="1">
-															<GridPane.margin>
-																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-															</GridPane.margin>
-														</Button>
-														<Button fx:id="btnEmpfaenger1" alignment="CENTER" disable="true" mnemonicParsing="false" onAction="#empfaengerButton" prefHeight="25.0" prefWidth="376.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-															<GridPane.margin>
-																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-															</GridPane.margin>
-														</Button>
+<AnchorPane>
+<children>
+														<Label alignment="CENTER" layoutX="44.399993896484375" layoutY="-2.0999984741210938" prefHeight="33.0" prefWidth="288.0" text="Sender" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" GridPane.columnIndex="1" />
+</children>
+</AnchorPane>
 														<TextField fx:id="tfDatenart1" alignment="TOP_LEFT" layoutX="359.0" layoutY="97.0" prefHeight="25.0" GridPane.columnIndex="2" GridPane.rowIndex="1" HBox.hgrow="ALWAYS">
 															<HBox.margin>
 																<Insets />
@@ -196,27 +201,51 @@
 																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 															</GridPane.margin>
 														</TextField>
-														<Label alignment="CENTER" layoutX="349.0" layoutY="80.0" prefHeight="17.0" prefWidth="308.0" text="Datenart" GridPane.columnIndex="2" />
-														<Button alignment="CENTER" disable="true" layoutX="283.0" layoutY="43.0" mnemonicParsing="false" onAction="#empfaengerButton" prefHeight="25.0" prefWidth="375.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-															<GridPane.margin>
-																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-															</GridPane.margin>
-														</Button>
 														<TextField alignment="TOP_LEFT" layoutX="560.0" layoutY="43.0" prefHeight="25.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
 															<GridPane.margin>
 																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 															</GridPane.margin>
 														</TextField>
-														<Button alignment="CENTER" disable="true" layoutX="283.0" layoutY="68.0" mnemonicParsing="false" onAction="#empfaengerButton" prefHeight="25.0" prefWidth="373.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-															<GridPane.margin>
-																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-															</GridPane.margin>
-														</Button>
 														<TextField alignment="TOP_LEFT" layoutX="560.0" layoutY="68.0" prefHeight="25.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
 															<GridPane.margin>
 																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 															</GridPane.margin>
 														</TextField>
+<AnchorPane GridPane.rowIndex="3" /><AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+<children>
+														<Label alignment="CENTER" layoutX="73.99996948242188" layoutY="3.9999771118164062" prefHeight="33.0" prefWidth="300.0" text="Empfänger" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" GridPane.columnIndex="1" />
+</children></AnchorPane><AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+<children>
+														<Label alignment="CENTER" layoutX="20.0" layoutY="10.0" prefHeight="33.0" prefWidth="347.0" text="Datenart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" GridPane.columnIndex="2" />
+</children></AnchorPane><AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+<children>
+														<Button fx:id="btnSender" alignment="CENTER" disable="true" layoutX="3.4000015258789062" layoutY="9.399993896484375" mnemonicParsing="false" onAction="#senderButton" prefHeight="35.0" prefWidth="300.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="4.0" GridPane.rowIndex="2">
+															<GridPane.margin>
+																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+															</GridPane.margin>
+														</Button>
+</children></AnchorPane><AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+<children>
+														<Button fx:id="btnEmpfaenger1" alignment="CENTER" disable="true" layoutX="-24.0" layoutY="1.0" mnemonicParsing="false" onAction="#empfaengerButton" prefHeight="33.0" prefWidth="352.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="4.0" GridPane.rowIndex="2">
+															<GridPane.margin>
+																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+															</GridPane.margin>
+														</Button>
+</children></AnchorPane><AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+<children>
+														<Button alignment="CENTER" disable="true" layoutX="-46.600006103515625" layoutY="-1.600006103515625" mnemonicParsing="false" onAction="#empfaengerButton" prefHeight="33.0" prefWidth="329.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="4.0" GridPane.rowIndex="2">
+															<GridPane.margin>
+																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+															</GridPane.margin>
+														</Button>
+</children></AnchorPane><AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+<children>
+														<Button alignment="CENTER" disable="true" layoutX="-52.100006103515625" layoutY="14.899993896484375" mnemonicParsing="false" onAction="#empfaengerButton" prefHeight="40.0" prefWidth="300.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="4.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+															<GridPane.margin>
+																<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+															</GridPane.margin>
+														</Button>
+</children></AnchorPane>
 													</children>
 												</GridPane>
 											</children>
@@ -224,12 +253,19 @@
 									</children>
 								</AnchorPane>
 							</content>
+<font>
+<Font name="System Bold" size="12.0" />
+</font>
 						</TitledPane>
-						<TitledPane animated="false" disable="true" expanded="false" prefHeight="92.0" text="Details">
+						<TitledPane animated="false" disable="true" minWidth="555.0" prefHeight="116.0" prefWidth="978.0" text="Details">
 							<content>
-								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="126.0" prefWidth="1181.0" />
+								<AnchorPane maxWidth="1111.0" minHeight="0.0" minWidth="0.0" prefHeight="126.0" />
 							</content>
-						</TitledPane>
+						</TitledPane><TitledPane animated="false" prefHeight="226.0" prefWidth="978.0" text="Dokumentation">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="93.0" prefWidth="976.0" />
+  </content>
+</TitledPane>
 					</children>
 				</VBox>
 			</items>
