--- a/EdiListFX/src/de/vbl/ediliste/view/TestAnchorPane.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/TestAnchorPane.fxml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="350.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-	<children>
-		<VBox layoutX="-17.0" layoutY="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<children>
-				<TextArea prefHeight="339.0" prefWidth="627.0" promptText="Prompt Text" text="This AnchorPane has a VBox and a TextArea. This text may be longer as one line so it can scrolled out the window, but there will be a slider to make it visible." />
-			</children>
-		</VBox>
-	</children>
-	<padding>
-		<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-	</padding>
+
+<AnchorPane prefHeight="632.0" prefWidth="773.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<children><ScrollPane prefHeight="632.0" prefWidth="773.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<content>
+<AnchorPane prefHeight="617.0" prefWidth="767.0">
+<children><TableView prefHeight="416.0" prefWidth="767.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+  <columns>
+    <TableColumn prefWidth="195.0" text="C1" />
+    <TableColumn prefWidth="357.0" text="C2" />
+  </columns>
+</TableView><TextArea layoutX="254.0" layoutY="386.0" prefHeight="201.0" prefWidth="767.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+</children>
+</AnchorPane>
+</content>
+</ScrollPane>
+</children>
 </AnchorPane>
